--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "@eslint/eslintrc": "^3"
-  }
+  },
+  "repository": "https://github.com/laixiangran/ai-learn.git"
 }
