--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@langchain/core": "^0.3.43",
     "@langchain/ollama": "^0.2.0",
     "chromadb": "^2.0.1",
+    "exceljs": "^4.4.0",
     "langchain": "^0.3.19",
     "next": "15.2.3",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
